Prevent welcome title to wrap on narrow viewport

--- a/pages/style.scss
+++ b/pages/style.scss
@@ -68,6 +68,10 @@ a {
         @media (max-width: 450px) {
           font-size: 9vw;
         }
+
+        @media (max-width: 340px) {
+          font-size: 8.6vw;
+        }
       }
 
       > label {
